--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
