--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-sortable-hoc": "^2.0.0",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.17.4"
